--- a/WeatherWebsite/public_html/style.css
+++ b/WeatherWebsite/public_html/style.css
@@ -9,18 +9,23 @@ and open the template in the editor.
 */
 
 body {
-    background-color: skyblue;
+    background-image: url("sunset.jpg");
+    background-size: 100%;
+    min-height: 100%;
+    min-width: 100%;
     font-family: 'Roboto', sans-serif;
 }
 
 .header{
     text-align: center;
     margin-bottom: 100px;
+    margin-top: 100px;
+    color: white;
 }
 
 .data{
     margin-left: 15vw;
-    margin-right: 15vw;
+    margin-right: 60vw;
 }
 
 .box{
